[package]
name = "hello-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3.57"
